@@ -23,7 +23,7 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.116 2011/11/10 02:09:10 snikkel Exp $
+Version change log: $Id: CHANGES.txt,v 1.117 2011/11/29 00:11:01 snikkel Exp $
 ==========================================================================
 
 2.9100
@@ -38,6 +38,7 @@ Version change log: $Id: CHANGES.txt,v 1.116 2011/11/10 02:09:10 snikkel Exp $
             imp: amd64: Via Nano core selection (#4437)
             imp: x86/amd64: AMD Opeteron 6xxx detection/selection (#4438)
             fix: cuda: processor counts for newer model fermi cards (#4441)
+            imp: win: allow CUDA/Stream to coexist (#4274)
 
 2.9109.518  fix: all: OGR-NG codebase fixes (#4295)
             fix: all: OGR-NG incorrect node count after full restart
